--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.12.0",
     "polished": "^3.4.2",
     "react": "^16.9.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
