--- a/package.json
+++ b/package.json
@@ -3,19 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/pro-duotone-svg-icons": "^5.11.2",
-    "@fortawesome/pro-light-svg-icons": "^5.12.0",
-    "@fortawesome/pro-regular-svg-icons": "^5.11.2",
-    "@fortawesome/pro-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.8",
     "axios": "^0.21.1",
     "node-sass": "^4.13.1",
     "polished": "^3.4.2",
     "react": "^16.9.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.9.0",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
