--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
-    "node-sass": "^4.13.1",
+    "node-sass": "^6.0.1",
     "polished": "^3.4.2",
-    "react": "^17.0.1",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "4.0.3",
-    "redux": "^4.0.4",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^3.1.2",
-    "styled-components": "^5.2.1"
+    "socket.io-client": "^4.1.3",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
