--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
-    "node-sass": "^6.0.1",
+    "node-sass": "4.14.1",
     "polished": "^3.4.2",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
