--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "shards-react": "^1.0.3",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0"
   },
