--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
+    "emoji-picker-react": "^3.4.8",
     "node-sass": "4.14.1",
     "polished": "^3.4.2",
     "react": "^17.0.2",
