--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-sass": "4.14.1",
     "polished": "^3.4.2",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
