--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "axios": "^0.21.1",
     "emoji-picker-react": "^3.4.8",
-    "node-sass": "4.14.1",
     "polished": "^3.4.2",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
@@ -17,6 +16,7 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.43.2",
     "shards-react": "^1.0.3",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0"
